--- a/package.json
+++ b/package.json
@@ -10,18 +10,41 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^5.5.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.10.0",
+    "@primer/octicons-react": "^10.0.0",
+    "clsx": "^1.1.1",
+    "concurrently": "^5.1.0",
+    "d3-timer": "^1.0.10",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "font-awesome": "^4.7.0",
+    "framer-motion": "^4.1.17",
+    "fscreen": "^1.0.2",
+    "is-plain-object": "^4.1.1",
+    "lodash-es": "^4.17.15",
+    "lodash.throttle": "^4.1.1",
+    "moment": "^2.27.0",
+    "node-fetch": "^2.6.0",
+    "notyf": "^3.10.0",
+    "react": "^16.13.1",
+    "react-copy-to-clipboard": "^5.0.2",
+    "react-dom": "^16.13.1",
+    "react-draggable": "^4.4.4",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "twilio": "^3.48.1",
+    "twilio-video": "^2.7.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently npm:server npm:dev",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "node server.js"
   },
   "eslintConfig": {
     "extends": [
