--- a/package.json
+++ b/package.json
@@ -7,18 +7,17 @@
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "web-vitals": "^2.1.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
     "@primer/octicons-react": "^10.0.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "clsx": "^1.1.1",
     "concurrently": "^5.1.0",
     "d3-timer": "^1.0.10",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "framer-motion": "^4.1.17",
@@ -36,7 +35,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "twilio": "^3.48.1",
-    "twilio-video": "^2.7.1"
+    "twilio-video": "^2.7.1",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "concurrently npm:server npm:dev",
